@@ -1,3 +1,9 @@
+2019-03-03  Harald Anlauf  <anlauf@gmx.de>
+
+	Backport from trunk
+	PR fortran/77583
+	* gfortran.dg/pr77583.f90: New test.
+
 2019-03-03  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/89174
