@@ -1,3 +1,11 @@
+2019-03-03  Harald Anlauf  <anlauf@gmx.de>
+	    Steven G. Kargl  <kargl@gcc.gnu.org>
+
+	Backport from trunk
+	PR fortran/77583
+	* symbol.c (check_conflict): Check for valid procedure name
+	passed to error reporting routine.
+
 2019-03-03  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR fortran/89174
